# 01-urban-air-quality-forecasting

./: .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  README.md  data-sources.md  docker-compose.yml  plan.md  rules.md
backend/: .env.example  Dockerfile  README.md  openapi.json  pyproject.toml
backend/app/: __init__.py  aqi.py  cache.py  config.py  constants.py  logging_config.py  main.py  middleware.py  request_context.py  schemas.py  seed.py
backend/app/ingestion/: __init__.py  cache.py  circuit_breaker.py  errors.py  etl.py  interpolation.py  models.py  resilient_client.py  station_registry.py  storage.py  timeutil.py  validation.py  weather_store.py
backend/app/ingestion/providers/: __init__.py  airnow.py  base.py  open_meteo.py  openaq.py
backend/app/modeling/: baselines.py  cv.py  features.py  inference.py  metrics.py  synthetic.py  train.py
backend/app/routers/: forecast.py  health.py  stations.py
backend/scripts/: evaluate_baselines.py  export_openapi.py  run_etl.py  run_features.py  seed_and_train.py  train_model.py
backend/tests/: conftest.py  test_api.py  test_circuit_breaker.py  test_contract.py  test_cv.py  test_etl.py  test_features.py  test_health.py  test_modeling.py  test_modeling_honesty.py  test_providers.py  test_resilient_client.py  test_synthetic_pipeline.py  test_validation.py  test_weather_store.py
backend/tests/fixtures/: airnow_observations.json  open_meteo_forecast.json  openaq_measurements.json
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  (+3 more)
(+30 files in other folders)
